[gd_scene load_steps=8 format=3 uid="uid://cdqd62tcyenpp"]

[ext_resource type="Theme" uid="uid://cfefgu8jbb3xm" path="res://Resources/Styles/default_theme.tres" id="1_4iyvt"]
[ext_resource type="Script" path="res://Scenes/Common/Buttons/Scripts/property_button.gd" id="2_02ubf"]
[ext_resource type="PackedScene" uid="uid://d34hkypk02kw1" path="res://Scenes/Common/Buttons/settings_managed_text_button.tscn" id="2_cc5bv"]
[ext_resource type="PackedScene" uid="uid://btj8iwsaoid87" path="res://Scenes/Common/Buttons/settings_managed_texture_button.tscn" id="3_pl6br"]
[ext_resource type="Texture2D" uid="uid://beflagctk5v4y" path="res://Icons/anticlockwise-rotation.svg" id="4_hiflb"]
[ext_resource type="PackedScene" uid="uid://b3y31p8o0rflk" path="res://Scenes/Common/Popups/change_properties_popup.tscn" id="7_dmcq2"]
[ext_resource type="PackedScene" uid="uid://gvqbnabor6pt" path="res://Scenes/Common/Popups/set_value_exact_popup.tscn" id="7_olfs5"]

[node name="PropertyButton" type="HBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("1_4iyvt")
theme_override_constants/separation = 2
script = ExtResource("2_02ubf")

[node name="ResetButton" parent="." instance=ExtResource("3_pl6br")]
layout_mode = 2
texture_2d = ExtResource("4_hiflb")

[node name="PropertyButton" parent="." instance=ExtResource("2_cc5bv")]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChangePropertiesPopup" parent="." instance=ExtResource("7_dmcq2")]
visible = false

[node name="SetValueExactPopup" parent="." instance=ExtResource("7_olfs5")]
visible = false

[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="PropertyButton" to="." method="_on_property_button_pressed"]
